--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.8'
+    implementation fileTree(dir: 'C:\\Users\\smere\\AppData\\Local\\Android\\Sdk\\platforms\\android-31', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
