--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.criborm.cleanairly"
-        minSdk 21
+        minSdk 23
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -46,5 +46,9 @@ dependencies {
     implementation fileTree(dir: 'C:\\Users\\smere\\AppData\\Local\\Android\\Sdk\\platforms\\android-31', include: ['*.aar', '*.jar'], exclude: [])
     implementation ('com.github.PhilJay:MPAndroidChart:v3.1.0')
     implementation "androidx.core:core-ktx:1.12.0"
+    implementation 'com.google.zxing:core:3.4.1'
+    implementation ('me.dm7.barcodescanner:zxing:1.7.2') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
 }
 
