--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -56,6 +56,16 @@ dependencies {
 
     implementation 'com.sun.mail:android-mail:1.6.7'
     implementation 'com.sun.mail:android-activation:1.6.7'
+
+    implementation ('me.dm7.barcodescanner:zxing:1.7.2') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
+
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation "androidx.core:core-ktx:1.12.0"
+    implementation 'com.google.zxing:core:3.4.1'
 }
 
 configurations.all {
